# Convex_Hull

./: CMakeLists.txt  README.md
src/: common.cpp  main.cpp  vec.cpp  vis.h
src/kernel_version/: CMakeLists.txt  Cartesian_base.h  Line_2.h  Point_2.h  Simple_cartesian.h  Vector_2.h  determinant.h  function_objects.h  main_kernel.cpp
src/non_template_version/: CMakeLists.txt  common.cpp  common.h  main.cpp  vec.h  vis.cpp
